There was a small z-index bug. Adding high z-index on navbar to ensure always on top

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -21,7 +21,7 @@ nav {
   display:block;
   width:100%;
   height:60px;
-  z-index:1;
+  z-index:1000;
   box-shadow:0px 0px 10px #333;
   /* height:60px; */
 }
